--- a/src/sx/ip/resources/fxml/FXMLTokenRequest.fxml
+++ b/src/sx/ip/resources/fxml/FXMLTokenRequest.fxml
@@ -85,10 +85,10 @@ limitations under the License.
         </AnchorPane>
         <AnchorPane fx:id="loginInfoPane" layoutX="2.0" layoutY="169.0" prefHeight="262.0" prefWidth="473.0">
          <children>
-            <ListView fx:id="listViewRequests" prefHeight="200.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <ListView fx:id="listViewRequests" editable="true" prefHeight="200.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
         </AnchorPane>
-        <JFXButton fx:id="btnSubmit" defaultButton="true" disable="true" layoutX="134.0" layoutY="386.0" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="New Request" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
+        <JFXButton fx:id="btnPlus" defaultButton="true" layoutX="134.0" layoutY="386.0" onAction="#newRequestAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="New Request" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
             <font>
                 <Font size="12.0" />
             </font>
