--- a/src/sx/ip/resources/fxml/FXMLTokenRequestListViewCell.fxml
+++ b/src/sx/ip/resources/fxml/FXMLTokenRequestListViewCell.fxml
@@ -17,13 +17,24 @@ limitations under the License.
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="147.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="83.0" prefWidth="327.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <opaqueInsets>
         <Insets />
     </opaqueInsets>
    <children>
-      <Label fx:id="label2" text="Label" AnchorPane.rightAnchor="0.0" />
-      <Label fx:id="label1" text="Label" AnchorPane.leftAnchor="0.0" />
+      <Label fx:id="lblStatus" text="Label" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+      <Label fx:id="lblAddr" layoutX="3.0" text="Label" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="20.0" />
+      <Label fx:id="lblAmount" layoutX="13.0" layoutY="10.0" text="Label" textFill="#707070" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="35.0">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblDate" layoutX="23.0" layoutY="20.0" text="Label" textFill="#707070" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
