--- a/src/sx/ip/resources/fxml/FXMLTokenRequest.fxml
+++ b/src/sx/ip/resources/fxml/FXMLTokenRequest.fxml
@@ -88,7 +88,7 @@ limitations under the License.
             <ListView fx:id="listViewRequests" editable="true" prefHeight="200.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
         </AnchorPane>
-        <JFXButton fx:id="btnPlus" defaultButton="true" layoutX="134.0" layoutY="386.0" onAction="#newRequestAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="New Request" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
+        <JFXButton fx:id="btnPlus" defaultButton="true" disable="true" layoutX="134.0" layoutY="386.0" onAction="#newRequestAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="New Request" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
             <font>
                 <Font size="12.0" />
             </font>
