--- a/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
@@ -69,7 +69,7 @@ limitations under the License.
             </Hyperlink>
          </left>
       </BorderPane>
-      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <graphic>
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
@@ -81,7 +81,7 @@ limitations under the License.
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="227.0" prefHeight="25.0" prefWidth="67.0" text="0" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
+            <Label fx:id="lblBalance" alignment="CENTER_RIGHT" layoutX="227.0" prefHeight="25.0" prefWidth="67.0" text="0" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
             <ImageView fitHeight="330.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@../imgs/icon.png" />
@@ -89,7 +89,6 @@ limitations under the License.
             </ImageView>
          </children>
       </AnchorPane>
-      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <VBox layoutX="30.0" layoutY="116.0" prefHeight="382.0" prefWidth="417.0" spacing="15.0" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
          <children>
             <AnchorPane maxHeight="70.0" minHeight="70.0" prefHeight="70.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;">
@@ -182,6 +181,7 @@ limitations under the License.
             </AnchorPane>
          </children>
       </VBox>
+      <JFXProgressBar fx:id="progressBar" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </children>
    <opaqueInsets>
       <Insets />
