--- a/src/sx/ip/resources/fxml/FXMLProxySummary.fxml
+++ b/src/sx/ip/resources/fxml/FXMLProxySummary.fxml
@@ -106,7 +106,7 @@ limitations under the License.
       </AnchorPane>
       <AnchorPane layoutX="30.0" layoutY="272.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="260.0">
          <children>
-            <JFXComboBox prefHeight="26.0" prefWidth="450.0" promptText="Choose a country" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" />
+            <JFXComboBox fx:id="comboCountry" prefHeight="26.0" prefWidth="450.0" promptText="Choose a country" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="29.0" layoutY="121.0" prefHeight="25.0" prefWidth="447.0" style="-fx-background-color: #6d6d6d20;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
@@ -154,7 +154,7 @@ limitations under the License.
             </AnchorPane>
             <AnchorPane layoutY="119.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="473.0">
                <children>
-                  <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="109.0" layoutY="-4.0" onAction="#loginAction" prefHeight="40.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Confirm Order" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
+                  <JFXButton fx:id="btnConfirm" defaultButton="true" layoutX="109.0" layoutY="-4.0" prefHeight="40.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Confirm Order" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -166,7 +166,7 @@ limitations under the License.
             </AnchorPane>
             <AnchorPane layoutY="182.0" maxHeight="57.0" minHeight="32.0" prefWidth="419.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
-                  <JFXButton fx:id="btnLoginEmail1" defaultButton="true" onAction="#loginAction" prefHeight="40.0" ripplerFill="#2aace0" style="-fx-background-color: white;" text="Cancel" textAlignment="CENTER" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
+                  <JFXButton fx:id="btnCancel" defaultButton="true" prefHeight="40.0" ripplerFill="#2aace0" style="-fx-background-color: white;" text="Cancel" textAlignment="CENTER" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
                      <font>
                         <Font size="12.0" />
                      </font>
