--- a/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
@@ -90,9 +90,9 @@ limitations under the License.
             </ImageView>
          </children>
       </AnchorPane>
-      <VBox layoutX="30.0" layoutY="116.0" prefHeight="382.0" prefWidth="417.0" spacing="15.0" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
+      <VBox alignment="CENTER" layoutX="30.0" layoutY="116.0" prefHeight="382.0" prefWidth="417.0" spacing="15.0" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
          <children>
-            <ListView fx:id="listViewPackages" editable="true" prefHeight="384.0" prefWidth="415.0">
+            <ListView fx:id="listViewPackages" prefHeight="384.0" prefWidth="415.0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
