--- a/src/sx/ip/resources/fxml/FXMLDashboard.fxml
+++ b/src/sx/ip/resources/fxml/FXMLDashboard.fxml
@@ -22,6 +22,7 @@ limitations under the License.
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -55,7 +56,7 @@ limitations under the License.
             </ImageView>
          </center>
          <left>
-            <Hyperlink fx:id="btnBack" BorderPane.alignment="CENTER">
+            <Hyperlink fx:id="btnBack" onAction="#logoutAction" BorderPane.alignment="CENTER">
                <graphic>
                   <MaterialIconView glyphName="ARROW_BACK" size="25">
                      <cursor>
@@ -69,12 +70,11 @@ limitations under the License.
             </Hyperlink>
          </left>
       </BorderPane>
-      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <graphic>
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <AnchorPane layoutX="30.0" layoutY="100.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="90.0">
          <children>
             <Label alignment="CENTER" layoutX="119.0" prefHeight="25.0" prefWidth="155.0" text="Dashboard" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
@@ -82,7 +82,7 @@ limitations under the License.
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="227.0" prefHeight="25.0" prefWidth="67.0" text="0" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
+            <Label fx:id="lblBalance" alignment="CENTER_RIGHT" layoutX="227.0" prefHeight="25.0" prefWidth="67.0" text="0" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
             <ImageView fitHeight="330.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@../imgs/icon.png" />
@@ -96,35 +96,43 @@ limitations under the License.
             <JFXButton minHeight="29.0" minWidth="121.0" style="-fx-background-color: #ffffff; -fx-border-color: #2aace0;" text="Inactive" textFill="#2aace0" />
          </children>
       </HBox>
+      <HBox alignment="CENTER" layoutX="39.0" layoutY="137.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0">
+         <children>
+            <JFXButton fx:id="btnNewProxy" minHeight="29.0" minWidth="121.0" onAction="#newProxyAction" style="-fx-background-color: #2aace0; -fx-border-color: #2aace0;" text="New Proxy" textFill="WHITE" />
+            <JFXButton fx:id="btnManualProxy" minHeight="29.0" minWidth="121.0" onAction="#manualProxyAction" style="-fx-background-color: #ffffff; -fx-border-color: #2aace0;" text="Manual Proxy" textFill="#2aace0" />
+         </children>
+      </HBox>
       <AnchorPane layoutX="42.0" layoutY="186.0" minHeight="44.0" style="-fx-border-color: #d0dce0; -fx-background-color: #ffffff; -fx-border-radius: 5px;" AnchorPane.bottomAnchor="319.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="186.0">
          <children>
             <MaterialIconView fill="#2aace0" glyphName="ADD" size="25" text="" wrappingWidth="23.999998569488525" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="8.0" />
             <Label layoutX="119.0" prefHeight="25.0" prefWidth="155.0" text="Create Token Deposit" textAlignment="JUSTIFY" textFill="#2aace0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="8.0" />
-            <JFXButton fx:id="depositFX" ripplerFill="#2aace0" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <JFXButton fx:id="depositFX" onAction="#tokenRequestAction" ripplerFill="#2aace0" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
          <cursor>
             <Cursor fx:constant="CLOSED_HAND" />
          </cursor>
       </AnchorPane>
-      <AnchorPane layoutX="52.0" layoutY="196.0" minHeight="44.0" style="-fx-border-color: #d0dce0; -fx-background-color: #ffffff; -fx-border-radius: 5px;" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="238.0">
+      <AnchorPane layoutX="30.0" layoutY="242.0" minHeight="44.0" prefHeight="63.0" prefWidth="417.0" style="-fx-border-color: #d0dce0; -fx-background-color: #ffffff; -fx-border-radius: 5px;" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="241.0">
          <children>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="17.0" AnchorPane.topAnchor="10.0">
                <image>
                   <Image url="@../imgs/trade.png" />
                </image>
             </ImageView>
-            <Label alignment="TOP_LEFT" layoutX="80.0" layoutY="12.0" prefHeight="16.0" prefWidth="220.0" text="About you as Provider" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="12.0">
+            <Label alignment="TOP_LEFT" layoutX="80.0" layoutY="12.0" prefHeight="16.0" prefWidth="220.0" text="About you as Provider" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="6.0">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label alignment="TOP_LEFT" layoutX="81.0" layoutY="32.0" prefHeight="16.0" prefWidth="269.0" text="Informations about operating as provider" textAlignment="JUSTIFY" textFill="#999999" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="31.0" />
-            <JFXButton fx:id="providerFX" minHeight="66.0" ripplerFill="#2aace0" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Label alignment="TOP_LEFT" layoutX="81.0" layoutY="32.0" prefHeight="16.0" prefWidth="269.0" text="Informations about operating as provider" textAlignment="JUSTIFY" textFill="#999999" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="22.0" />
+            <JFXButton fx:id="providerFX" layoutX="2.0" layoutY="2.0" minHeight="66.0" prefHeight="68.0" prefWidth="414.0" ripplerFill="#2aace0" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0" />
          </children>
          <cursor>
             <Cursor fx:constant="CLOSED_HAND" />
          </cursor>
       </AnchorPane>
+      <ListView layoutX="34.0" prefHeight="159.0" prefWidth="409.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" />
+      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </children>
    <opaqueInsets>
       <Insets />
