--- a/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
@@ -22,7 +23,6 @@ limitations under the License.
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -56,7 +56,7 @@ limitations under the License.
             </ImageView>
          </center>
          <left>
-            <Hyperlink fx:id="btnBack" BorderPane.alignment="CENTER">
+            <Hyperlink fx:id="btnBack" onAction="#goBackAction" BorderPane.alignment="CENTER">
                <graphic>
                   <MaterialIconView glyphName="ARROW_BACK" size="25">
                      <cursor>
@@ -92,11 +92,7 @@ limitations under the License.
       </AnchorPane>
       <VBox alignment="CENTER" layoutX="30.0" layoutY="116.0" prefHeight="382.0" prefWidth="417.0" spacing="15.0" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
          <children>
-            <ListView fx:id="listViewPackages" prefHeight="384.0" prefWidth="415.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </ListView>
+            <JFXListView fx:id="listViewPackages" />
          </children>
       </VBox>
       <JFXProgressBar fx:id="progressBar" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
