--- a/src/sx/ip/resources/fxml/FXMLProxySummary.fxml
+++ b/src/sx/ip/resources/fxml/FXMLProxySummary.fxml
@@ -55,7 +55,7 @@ limitations under the License.
             </ImageView>
          </center>
          <left>
-            <Hyperlink fx:id="btnBack" BorderPane.alignment="CENTER">
+            <Hyperlink fx:id="btnBack" onAction="#goBackAction" BorderPane.alignment="CENTER">
                <graphic>
                   <MaterialIconView glyphName="ARROW_BACK" size="25">
                      <cursor>
@@ -90,14 +90,14 @@ limitations under the License.
                   <Image url="@../imgs/coins.png" />
                </image>
             </ImageView>
-            <Label text="50 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="30.0">
+            <Label fx:id="lblCost" text="50 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="30.0">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label text="60 min" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="45.0" />
-            <Label text="100 MB" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="30.0" />
-            <Label layoutX="48.0" layoutY="13.0" text="Silver Pack" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="15.0">
+            <Label fx:id="lblTime" text="60 min" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="45.0" />
+            <Label fx:id="lblUsage" text="100 MB" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="30.0" />
+            <Label fx:id="lblPackageName" layoutX="48.0" layoutY="13.0" text="Silver Pack" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="15.0">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -154,7 +154,7 @@ limitations under the License.
             </AnchorPane>
             <AnchorPane layoutY="119.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="473.0">
                <children>
-                  <JFXButton fx:id="btnConfirm" defaultButton="true" layoutX="109.0" layoutY="-4.0" prefHeight="40.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Confirm Order" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
+                  <JFXButton fx:id="btnConfirm" defaultButton="true" layoutX="109.0" layoutY="-4.0" onAction="#goToProxyDetailAction" prefHeight="40.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Confirm Order" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -166,7 +166,7 @@ limitations under the License.
             </AnchorPane>
             <AnchorPane layoutY="182.0" maxHeight="57.0" minHeight="32.0" prefWidth="419.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
-                  <JFXButton fx:id="btnCancel" defaultButton="true" prefHeight="40.0" ripplerFill="#2aace0" style="-fx-background-color: white;" text="Cancel" textAlignment="CENTER" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
+                  <JFXButton fx:id="btnCancel" defaultButton="true" onAction="#cancelAction" prefHeight="40.0" ripplerFill="#2aace0" style="-fx-background-color: white;" text="Cancel" textAlignment="CENTER" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
                      <font>
                         <Font size="12.0" />
                      </font>
